[package]
name = "tome"
version = "0.0.1"
authors = ["Joel Schlosser"]

[dependencies]
log = "*"
regex = "*"

[dependencies.mio]
git = "https://github.com/carllerche/mio.git"

[dependencies.ncurses]
git = "https://github.com/jeaye/ncurses-rs.git"

[lib]
name = "tome"
path = "src/core/lib.rs"

[[bin]]
name = "tome"
path = "src/main.rs"
